# savOs

./: Cargo.toml  Readme.md  x86_64-sav_os.json
.cargo/: config.toml
.devops/develop/docker/: Dockerfile  docker-compose.yml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
