[package]
name = "sav_os"
version = "0.1.0"
edition = "2018"
authors= ["Oscar Sánchez <oscar.sanchez@savne.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23" #Habilita un cargador de arranque
volatile = "0.2.6"
spin = "0.5.2" #Bloqruar un apuntador
x86_64 = "0.14.2"
uart_16550 = "0.2.0" #Comunicación con puerto serial de qemu

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
#panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

# Configuración para la generación de nuestro boot
[package.metadata.bootimage]
test-args = [ # Parametros pasados a qemu cuando se ejecutan tests
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1, se define código de finalización exitosa
test-timeout = 300          # 5 minutos, tiempo máximo de ejecución para un test antes de darlo como fallido

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false